--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,14 @@ header a {
   color: var(--light);
 }
 
+.logo-image{
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: -6px;
+}
+
 button {
   font-size: 1rem;
   text-decoration: none;
